<resources>
    <string name="app_name">Football Match Schedule</string>

    <string name="match_score_separator">-</string>
    <string name="upcoming_match_score_separator">vs</string>

    <string name="menu_prev_match">Prev Match</string>
    <string name="menu_next_match">Next Match</string>
    <string name="menu_favorites">Favorites</string>

    <string name="intent_match_id">MATCH_ID</string>
    <string name="intent_home_team_id">HOME_TEAM_ID</string>
    <string name="intent_away_team_id">AWAY_TEAM_ID</string>

    <string name="label_goals">Goals</string>
    <string name="label_shots">Shots</string>
    <string name="label_lineups">Lineups</string>
    <string name="label_goalkeeper">Goalkeeper</string>
    <string name="label_defenders">Defenders</string>
    <string name="label_midfielders">Midfielders</string>
    <string name="label_forwards">Forwards</string>
    <string name="label_substitutes">Substitutes</string>

    <string name="label_added_to_favorite">Added to favorite</string>
    <string name="label_removed_from_favorite">Removed from favorite</string>

    <string name="database_name">Football.db</string>

    <string name="lorem1">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed felis velit, elementum at finibus eu, venenatis et augue. Mauris posuere a magna a scelerisque. Aliquam hendrerit egestas mi, sed imperdiet eros efficitur quis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus sem velit, lacinia tempus viverra at, dignissim eget mi. Duis enim magna, finibus quis justo quis, laoreet lacinia velit. Nunc arcu erat, scelerisque vel risus rutrum, varius pellentesque dui.
    </string>

</resources>
